# Myco

./: .git-commit-msg.tmp  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MYCO.md  PYPI_SETUP.md  README.md  README_ja.md  README_prototype.md  README_zh.md  SECURITY.md  _add_related.py  _canon.yaml  _canon_lint.yaml  commit_msg.txt  coverage.json  glama.json  log.md  pyproject.toml  server.json  skills-lock.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.cowork-plugin/: .mcp.json  README.md
.docker/: .dockerignore  Dockerfile
.docs/: INSTALL.md  README.md  comparisons.md  contract_changelog.md  release_process.md
.github/: CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.meta/: server.json
.myco/: MYCO.md  canon.yaml  canon_lint.yaml
.myco_state/: boot_brief.md  decay_baseline.yaml  search_misses.yaml  shim_hits.json
.scripts/: audit_to_issues.py  build_plugin.py  bump_version.py  coverage_floors.py  migrate_ascc_substrate.py  myco_migrate.py  seed_auto_evolve_tracking_issue.py  sync_plugin_mirrors.py  verify.py  verify_install_examples.py  verify_mcp_capabilities.py  verify_server_json.py
.tests/: test_scaffold.py
adapters/: README.md  cursor.yaml  gpt.yaml  mempalace.yaml
agents/: primordium.md  stipe.md
anchor_client/: package-lock.json  package.json  tsconfig.json
assets/: _gen_logo.py  myco_design_philosophy.md
commands/: myco-autolyze.md
docs/: INSTALL.md  README.md  WORKFLOW.md  agent_protocol.md  architecture.md  ascc_agent_handoff_prompt.md  ascc_migration_v1_2.md  biomimetic_map.md  bionic_lexicon.md  contract_changelog.md  craft_protocol.md  evolution_engine.md  open_problems.md  operational_narratives.md  research_paper_craft.md  reusable_system_design.md  symbionts.md  theory.md  v09_planning_debate_2026-04-09.md  vision.md
examples/: README.md
forage/: .gitignore  README.md  _index.yaml
hooks/: derive_changelog.py  hooks.json
kernel/bridge/: Cargo.toml
kernel/bridge/src/: client.rs  framing.rs  lib.rs  protocol.rs  tropism_bridge.rs
kernel/bridge/tests/: bridge_e2e.rs
kernel/bridge_python/: pyproject.toml
kernel/bridge_python/src/myco_kernel_bridge/: __init__.py  __main__.py  daemon.py  dispatcher.py  framing.py  protocol.py
kernel/bridge_python/tests/: test_canonical_bytes_decode.py  test_daemon_smoke.py  test_dispatcher.py  test_framing.py  test_protocol.py
kernel/continuity/: Cargo.toml
kernel/continuity/src/: cold_resume.rs  cycle.rs  dormancy.rs  lib.rs  quarantine.rs  wal.rs
kernel/governance/: README.md  pyproject.toml
kernel/governance/src/myco_kernel_governance/: __init__.py  attestation.py  canonical_bytes.py  classifier.py  crypto.py  owner_keys.py  owner_keys_persistence.py  schema_evolution.py
kernel/governance/tests/: test_attestation.py  test_canonical_bytes.py  test_classifier.py  test_crypto.py  test_m2_e2e_attestation.py  test_owner_keys.py  test_owner_keys_persistence.py  test_schema_evolution.py
kernel/hard_rules/: README.md  pyproject.toml
kernel/hard_rules/src/myco_kernel_hard_rules/: __init__.py  detectors.py
kernel/hard_rules/tests/: test_detectors.py  test_m4_first_alive_substrate.py
kernel/schema/: Cargo.toml
kernel/schema/src/: dag.rs  lib.rs  spore.rs  ssot.rs  validation.rs
kernel/shared/: Cargo.toml
kernel/shared/src/: active_prefix.rs  canonical_bytes.rs  crypto.rs  lib.rs  sealed_derive.rs
kernel/skin/: Cargo.toml
kernel/skin/src/: egress_enforce.rs  envelope.rs  handshake.rs  lib.rs  output_gate.rs  surface.rs
kernel/trajectory/: README.md  pyproject.toml
kernel/trajectory/src/myco_kernel_trajectory/: __init__.py  cluster.py  query.py
kernel/trajectory/tests/: test_trajectory.py
kernel/tropism/: README.md  pyproject.toml
kernel/tropism/src/myco_kernel_tropism/: __init__.py  appetite_axis.py  gradient.py  persistence.py  sporocarp.py
kernel/tropism/tests/: test_kernel_tropism.py  test_persistence.py
legacy_v0_3/: CHANGELOG.md  CONTRIBUTING.md  MYCO.md  README.md  README_ja.md  README_v0_3.md  README_zh.md  SECURITY.md  log.md
m1_milestone/: Cargo.toml
m1_milestone/src/: lib.rs
m1_milestone/tests/: m1_end_to_end.rs
myco_substrate/: Cargo.toml
myco_substrate/src/: derived_state.rs  events.rs  lib.rs  main.rs  persistence.rs  server.rs
myco_substrate/tests/: substrate_e2e.rs
notes/: README.md  n_20260410T231616_b930.md  n_20260410T231817_1108.md  n_20260410T231817_126a.md  n_20260410T231817_1a25.md  n_20260410T231817_1e2e.md  n_20260410T231817_1ee2.md  n_20260410T231817_3174.md  n_20260410T231817_3e02.md  n_20260410T231817_5405.md  n_20260410T231817_6280.md  n_20260410T231817_64ef.md  n_20260410T231817_839a.md  n_20260410T231817_84f1.md  n_20260410T231817_9f18.md  n_20260410T231817_a990.md  n_20260410T231817_c2aa.md  n_20260410T231817_d8d6.md  n_20260410T231817_de36.md  n_20260410T231817_e0b0.md  n_20260410T231817_e6fa.md  n_20260410T231817_f993.md  n_20260410T231817_fc24.md  n_20260411T001033_9976.md  n_20260411T030203_38e4.md  n_20260411T032353_6951.md  n_20260411T121012_bc3a.md  n_20260411T172204_5d39.md  n_20260411T172204_a79d.md  n_20260411T173125_f153.md  n_20260411T174548_bc0c.md  n_20260411T180646_3875.md  n_20260411T181557_381c.md  n_20260411T181616_8ea3.md  n_20260411T182659_76ce.md  n_20260411T183115_f5c5.md  n_20260411T183403_a984.md  n_20260411T183722_c1b2.md  n_20260411T184726_2ef7.md  n_20260411T184826_4256.md  (+166 more)
scripts/: audit_to_issues.py  build_plugin.py  bump_version.py  compress_original.py  coverage_floors.py  generate_changelog.py  install_cowork_plugin.py  install_git_hooks.sh  lint_knowledge.py  migrate_ascc_substrate.py  myco_init.py  myco_migrate.py  pypi_upload.bat  run_first_evolution.py  sync_plugin_mirrors.py  verify_install_examples.py  (+3 more)
test_vectors_rs/: Cargo.toml
test_vectors_rs/src/: lib.rs
test_vectors_rs/tests/: canonical_bytes_parity.rs  crypto_parity.rs
(+1368 files in other folders)
