[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "myco"
dynamic = ["version"]
description = "Agent-First symbiotic cognitive substrate. 19 fungal-named verbs (18 agent + 1 human `brief`), 25-dimension immune, substrate-local plugins, editable-by-default install, universal MCP stdio server."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Yanjun" },
]
keywords = [
  "agent",
  "substrate",
  "knowledge-management",
  "mcp",
  "model-context-protocol",
  "mycelium",
  "cognitive",
  "agent-first",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Battam1111/Myco"
Repository = "https://github.com/Battam1111/Myco"
Documentation = "https://github.com/Battam1111/Myco/tree/main/docs"
Changelog = "https://github.com/Battam1111/Myco/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Battam1111/Myco/issues"

[project.optional-dependencies]
# ``pip install 'myco[mcp]'`` — pulls in the Model Context Protocol SDK
# so ``python -m myco.mcp`` (and any other MCP adapter) has what it needs.
# Floor of 1.2 covers the FastMCP.run() entry point used by the launcher;
# the low-level Server API has been stable across the entire 1.x line.
mcp = [
  "mcp>=1.2",
]
# ``pip install 'myco[adapters]'`` — pulls in optional deps for
# ingestion adapters: PDF, HTML, and URL. The built-in text-file,
# code-repo, CSV/JSON/JSONL, and tabular adapters use only the
# standard library and work without this extras target.
adapters = [
  "httpx>=0.27",
  "pypdf>=4.0",
  "beautifulsoup4>=4.12",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # v0.5.7: pin the type-stub floor so `mypy src/myco` runs clean on a
  # fresh `pip install -e ".[dev]"` without an extra "missing stubs"
  # round. types-PyYAML provides the stubs mypy asks for when it sees
  # our ``import yaml`` / ``yaml.safe_load`` calls.
  "types-PyYAML>=6.0",
  # Linter + formatter for the baseline encoded in [tool.ruff] below.
  # Floor pegged at the ruff that introduced --unsafe-fixes stabilized
  # semantics so CI rules do not drift as ruff releases roll forward.
  "ruff>=0.5",
  # Static type checker for the baseline in [tool.mypy] below. Any
  # 1.x release works; we pin the floor so CI's mypy is predictable.
  "mypy>=1.8",
]

[project.scripts]
# Three stable PATH-level entry points so `.mcp.json` and hook configs
# never have to reason about the user's venv or whether `python` vs
# `python3` is the right alias.
#
#   myco              the manifest-driven CLI (19 verbs at v0.5.24:
#                     18 agent + 1 human-facing `brief`).
#   mcp-server-myco   the MCP stdio/sse launcher; follows the
#                     community `mcp-server-<name>` convention so
#                     tools like uvx, pipx, and the MCP Registry
#                     can pick it up without configuration.
#   myco-install      zero-copy-paste install into any of ten MCP
#                       hosts (Claude Code, Claude Desktop, Cursor,
#                       Windsurf, Zed, VS Code, OpenClaw, Gemini CLI,
#                       Codex CLI, Goose). Writes the correct schema
#                       per host (JSON / TOML / YAML); idempotent.
myco = "myco.surface.cli:main"
mcp-server-myco = "myco.mcp:main"
myco-install = "myco.install:main"

# v0.5 (MAJOR 6) — dimension registration via entry-points.
#
# Myco's own built-in dimensions register here, the same way a third-
# party substrate plugin would. `default_registry()` discovers this
# table at runtime via `importlib.metadata.entry_points(group=
# "myco.dimensions")`. Adding a dimension means: write the class, add
# a row here, run `pip install -e .` (installed users get it
# automatically on next `pip install`). No edit to
# `src/myco/homeostasis/dimensions/__init__.py`'s `_BUILT_IN` tuple is
# strictly required after v0.5 — the tuple is the dev-checkout
# fallback, not the SSoT.
#
# Third-party dimension packages follow the same shape:
#
#   [project.entry-points."myco.dimensions"]
#   my_id = "mypkg.lint:MyDimensionClass"
[project.entry-points."myco.dimensions"]
M1 = "myco.homeostasis.dimensions.m1_canon_identity_fields:M1CanonIdentityFields"
M2 = "myco.homeostasis.dimensions.m2_entry_point_exists:M2EntryPointExists"
M3 = "myco.homeostasis.dimensions.m3_write_surface_declared:M3WriteSurfaceDeclared"
MF1 = "myco.homeostasis.dimensions.mf1_declared_subsystems_exist:MF1DeclaredSubsystemsExist"
MF2 = "myco.homeostasis.dimensions.mf2_substrate_local_plugin_health:MF2SubstrateLocalPluginHealth"
MP1 = "myco.homeostasis.dimensions.mp1_no_provider_imports:MP1NoProviderImports"
SH1 = "myco.homeostasis.dimensions.sh1_package_version_ref:SH1PackageVersionRef"
MB1 = "myco.homeostasis.dimensions.mb1_raw_notes_backlog:MB1RawNotesBacklog"
MB2 = "myco.homeostasis.dimensions.mb2_no_integrated_yet:MB2NoIntegratedYet"
SE1 = "myco.homeostasis.dimensions.se1_dangling_refs:SE1DanglingRefs"
SE2 = "myco.homeostasis.dimensions.se2_orphan_integrated:SE2OrphanIntegrated"
# v0.5.8 additions (Phase 14 of the v0.5.8 cleanup):
MP2 = "myco.homeostasis.dimensions.mp2_plugin_provider_imports:MP2PluginProviderImports"
DC1 = "myco.homeostasis.dimensions.dc1_module_docstring:DC1ModuleDocstring"
DC2 = "myco.homeostasis.dimensions.dc2_public_function_docstring:DC2PublicFunctionDocstring"
DC3 = "myco.homeostasis.dimensions.dc3_public_class_docstring:DC3PublicClassDocstring"
DC4 = "myco.homeostasis.dimensions.dc4_module_doc_ref:DC4ModuleDocRef"
CS1 = "myco.homeostasis.dimensions.cs1_contract_version_sync:CS1ContractVersionSync"
RL1 = "myco.homeostasis.dimensions.rl1_rules_referenced:RL1RulesReferenced"
FR1 = "myco.homeostasis.dimensions.fr1_fresh_substrate_invariants:FR1FreshSubstrateInvariants"
PA1 = "myco.homeostasis.dimensions.pa1_write_surface_coverage:PA1WriteSurfaceCoverage"
SE3 = "myco.homeostasis.dimensions.se3_link_self_cycle:SE3LinkSelfCycle"
MB3 = "myco.homeostasis.dimensions.mb3_raw_notes_high_watermark:MB3RawNotesHighWatermark"
CG1 = "myco.homeostasis.dimensions.cg1_doctrine_has_src_reference:CG1DoctrineHasSrcReference"
CG2 = "myco.homeostasis.dimensions.cg2_subpackage_has_doctrine_link:CG2SubpackageHasDoctrineLink"
DI1 = "myco.homeostasis.dimensions.di1_discipline_hooks_present:DI1DisciplineHooksPresent"

[tool.hatch.version]
# Single source of truth for the package version — per L1 versioning.md.
path = "src/myco/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/myco"]

[tool.hatch.build.targets.sdist]
# Ephemeral / dev-only files that should never ship to PyPI even if
# they happen to sit at the repo root mid-release. The .gitignore
# mostly covers these already; this block is belt-and-suspenders so
# a stray `python -m build` while a release-notes scratch file is
# present does not leak it into the tarball.
include = [
  "/src",
  "/tests",
  "/docs",
  "/scripts",
  "/assets",
  "/skills",
  "/hooks",
  "/.claude-plugin",
  "/.claude",
  "/.github",
  "/.mcp.json",
  "/_canon.yaml",
  "/MYCO.md",
  "/README.md",
  "/README_zh.md",
  "/README_ja.md",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/pyproject.toml",
  "/docs/INSTALL.md",
]
exclude = [
  "/.release_notes_*.md",
  "/upload*.log",
  "/dist",
  "/build",
  "/legacy_v0_3",
  "/.pytest_cache",
  "/.venv",
  "**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]

# -----------------------------------------------------------------------------
# v0.5.7 — Tool baselines (locked for CI consumption)
# -----------------------------------------------------------------------------

[tool.mypy]
# The v0.5.7 baseline is deliberately permissive: we opt in to the two
# hygiene flags (unused ignores, redundant casts) without forcing
# strict-mode over the whole repo. That lets us fix real type drift
# incrementally without blocking small PRs on an explosion of Any leaks.
# The CI workflow runs `mypy src/myco` only (not tests/) — tests import
# via fixtures that would need extensive stub work.
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = false
show_error_codes = true
# Modules without third-party stubs: don't crash, just log.
ignore_missing_imports = true
# Per-module overrides can live under [[tool.mypy.overrides]] below as
# tightening lands. For v0.5.7 we ship the baseline only.

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]
# Exclude the legacy quarantine and runtime caches so ruff doesn't
# report on files we intentionally do not maintain.
exclude = [
  "legacy_v0_3",
  ".myco_state",
  ".venv",
  "dist",
  "build",
]

[tool.ruff.lint]
# Conservative but non-trivial selection: errors + pycodestyle
# warnings + import discipline + modernization + common security
# + common correctness + common simplification. S (bandit) is kept
# out of the default because `assert` use in tests would flood
# findings; tests opt in via per-file-ignores below if needed.
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort (import ordering)
  "B",     # flake8-bugbear
  "UP",    # pyupgrade (3.10+ idioms)
  "SIM",   # flake8-simplify
  "C4",    # flake8-comprehensions
  "RUF",   # ruff-specific
]
# RUF001 (ambiguous unicode) fires on legitimate typographic dashes in
# changelog templates; RUF022 (unsorted __all__) is low-value churn;
# E501 line-too-long is covered informally by `ruff format`. Line
# length enforcement happens through the formatter, not the linter.
ignore = [
  "E501",
  "RUF001",
  "RUF022",
  "RUF043",  # pytest.raises ambiguous pattern — low-signal
  "SIM105",  # contextlib.suppress rewrite — cosmetic
  "SIM108",  # if-else vs if-exp — cosmetic
  "SIM110",  # any() rewrite — cosmetic
  "SIM117",  # combined with statements — cosmetic on test I/O contexts
  "B904",    # raise from — cosmetic on already-intentional patterns
]

[tool.ruff.lint.per-file-ignores]
# Test files are allowed to use asserts and may skip some stylistic
# rules that make sense only in production code.
"tests/**" = ["B017"]
# Generated / template strings in the ramify scaffolder include
# example code that intentionally uses old-style typing etc.
"src/myco/cycle/ramify.py" = ["UP035"]

[tool.ruff.format]
# Ruff's formatter is stable enough to be our canonical formatter.
# Running `ruff format` produces deterministic output identical to
# `black` on the vast majority of cases (double-quoted strings,
# trailing commas in multi-line collections, etc.). Declaring it here
# pins the convention so contributor diffs don't churn on formatter
# version drift.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
