[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "myco"
dynamic = ["version"]
description = "Agent-First symbiotic cognitive substrate. 20 fungal-named verbs (19 agent + 1 human-facing `brief`), 50-dimension immune across 7 subsystems, substrate-local plugins via .myco/plugins/, editable-by-default install, universal MCP stdio + streamable-http server with OAuth 2.1, schema v3 canon."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Yanjun" },
]
keywords = [
  "agent",
  "substrate",
  "knowledge-management",
  "mcp",
  "model-context-protocol",
  "mycelium",
  "cognitive",
  "agent-first",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Battam1111/Myco"
Repository = "https://github.com/Battam1111/Myco"
Documentation = "https://github.com/Battam1111/Myco/tree/main/docs"
Changelog = "https://github.com/Battam1111/Myco/blob/main/.docs/contract_changelog.md"
"Bug Tracker" = "https://github.com/Battam1111/Myco/issues"

[project.optional-dependencies]
# ``pip install 'myco[mcp]'`` — pulls in the Model Context Protocol SDK
# so ``python -m myco.boundary.mcp`` (and any other MCP adapter) has what it needs.
# Floor of 1.2 covers the FastMCP.run() entry point used by the launcher;
# the low-level Server API has been stable across the entire 1.x line.
mcp = [
  "mcp>=1.2",
]
# ``pip install 'myco[adapters]'`` — pulls in optional deps for
# ingestion adapters: PDF, HTML, and URL. The built-in text-file,
# code-repo, CSV/JSON/JSONL, and tabular adapters use only the
# standard library and work without this extras target.
adapters = [
  "httpx>=0.27",
  "pypdf>=4.0",
  "beautifulsoup4>=4.12",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # v0.6.0 §K.4: parallel test execution. ``--dist loadfile`` keeps
  # conftest fixture state intact across worker boundaries.
  "pytest-xdist>=3.5",
  # v0.5.7: pin the type-stub floor so `mypy src/myco` runs clean on a
  # fresh `pip install -e ".[dev]"` without an extra "missing stubs"
  # round. types-PyYAML provides the stubs mypy asks for when it sees
  # our ``import yaml`` / ``yaml.safe_load`` calls.
  "types-PyYAML>=6.0",
  # Linter + formatter for the baseline encoded in [tool.ruff] below.
  # Floor pegged at the ruff that introduced --unsafe-fixes stabilized
  # semantics so CI rules do not drift as ruff releases roll forward.
  "ruff>=0.5",
  # Static type checker for the baseline in [tool.mypy] below. Any
  # 1.x release works; we pin the floor so CI's mypy is predictable.
  "mypy>=1.8",
]
# v0.6.0 §B.2 / §A6: OAuth 2.1 + PKCE + RFC 8707 streamable-http stack.
# python-jose retained per owner amendment §A6.
mcp-auth = [
  "python-jose>=3.5",
  "authlib>=1.3",
  "cryptography>=42",
]
# v0.6.0 §A.1: MCP resources subscription file-watching. watchfiles
# is the lightest-weight cross-platform inotify wrapper.
mcp-resources = [
  "watchfiles>=0.21",
]
# v0.7.10: ``pip install 'myco[examples]'`` — pulls in every framework
# the 8-demo subtree under ``examples/`` exercises. Used by
# ``tests/integration/examples/test_examples_smoke.py`` to flip the
# import-cleanly skips into real coverage. Each entry corresponds 1:1
# to a demo directory; see each demo's README.md for the canonical
# install command (kept in lockstep with this list). PraisonAI lives
# under the ``praisonaiagents`` distribution, not ``praisonai``;
# Microsoft's framework is published as ``agent-framework``. None of
# these names are PyPI placeholders — every one is a live package as
# of v0.7.10. We intentionally don't pin floors here: framework
# releases move fast and the demos exercise only stable surfaces
# (MCP adapters), so floor-bumping every cycle is churn for no
# correctness gain.
examples = [
  "agno",
  "claude-agent-sdk",
  "crewai[tools]",
  "dspy",
  "langgraph",
  "langchain-mcp-adapters",
  "agent-framework",
  "praisonaiagents",
  "smolagents",
]
# v0.8.0: ``pip install 'myco[multimedia]'`` — pulls in the audio /
# image-OCR / video-frame transitive closure so the three v0.8.0
# multimedia adapters (audio.py, image_ocr.py, video_frames.py) can
# transcribe / OCR. Heavy footprint (~500 MB once PyTorch + Whisper
# weights land), so it's strictly opt-in: the default install stays
# lean and the adapters register-but-emit-failed-stubs when the
# extras are absent (lazy-import architecture; module import stays
# stdlib-only). Floors:
#   * openai-whisper >= 20240930 — last release before the ``base``-
#     model checksum changes; older floors download stale weights.
#   * pytesseract >= 0.3.10 — first release with the
#     TesseractNotFoundError public alias the image-OCR adapter
#     catches.
#   * opencv-python-headless >= 4.10.0.84 — headless variant avoids
#     the GUI-toolkit dep (Qt/GTK) so ``pip install`` stays clean
#     on CI containers; 4.10.x is the LTS line as of v0.8.0.
#   * Pillow >= 10.0.0 — the security-fix line; older 9.x has CVE-
#     2023-44271 (DoS) and the operator should never land on it.
# The extra also pulls PyTorch transitively via openai-whisper —
# that's the ~500 MB piece. Note for users on resource-constrained
# CI: skip ``[multimedia]`` and the three adapters cleanly emit
# install-extras failed-stubs for any audio/image/video file forage
# encounters, so default-install paths are never silently broken.
multimedia = [
  "openai-whisper >= 20240930",
  "pytesseract >= 0.3.10",
  "opencv-python-headless >= 4.10.0.84",
  "Pillow >= 10.0.0",
]

[project.scripts]
# Three stable PATH-level entry points so `.mcp.json` and hook configs
# never have to reason about the user's venv or whether `python` vs
# `python3` is the right alias.
#
#   myco              the manifest-driven CLI (20 verbs since v0.6.0:
#                     19 agent + 1 human-facing `brief`).
#   mcp-server-myco   the MCP stdio/sse launcher; follows the
#                     community `mcp-server-<name>` convention so
#                     tools like uvx, pipx, and the MCP Registry
#                     can pick it up without configuration.
#   myco-install      zero-copy-paste install into any of ten MCP
#                       hosts (Claude Code, Claude Desktop, Cursor,
#                       Windsurf, Zed, VS Code, OpenClaw, Gemini CLI,
#                       Codex CLI, Goose). Writes the correct schema
#                       per host (JSON / TOML / YAML); idempotent.
myco = "myco.boundary.surface.cli:main"
mcp-server-myco = "myco.boundary.mcp:main"
myco-install = "myco.boundary.install:main"

# v0.5 (MAJOR 6) — dimension registration via entry-points.
#
# Myco's own built-in dimensions register here, the same way a third-
# party substrate plugin would. `default_registry()` discovers this
# table at runtime via `importlib.metadata.entry_points(group=
# "myco.dimensions")`. Adding a dimension means: write the class, add
# a row here, run `pip install -e .` (installed users get it
# automatically on next `pip install`). No edit to
# `src/myco/homeostasis/dimensions/__init__.py`'s `_BUILT_IN` tuple is
# strictly required after v0.5 — the tuple is the dev-checkout
# fallback, not the SSoT.
#
# Third-party dimension packages follow the same shape:
#
#   [project.entry-points."myco.dimensions"]
#   my_id = "mypkg.lint:MyDimensionClass"
[project.entry-points."myco.dimensions"]
M1 = "myco.homeostasis.dimensions.mechanical.m1_canon_identity_fields:M1CanonIdentityFields"
M2 = "myco.homeostasis.dimensions.mechanical.m2_entry_point_exists:M2EntryPointExists"
M3 = "myco.homeostasis.dimensions.mechanical.m3_write_surface_declared:M3WriteSurfaceDeclared"
MF1 = "myco.homeostasis.dimensions.mechanical.mf1_declared_subsystems_exist:MF1DeclaredSubsystemsExist"
MF2 = "myco.homeostasis.dimensions.mechanical.mf2_substrate_local_plugin_health:MF2SubstrateLocalPluginHealth"
MP1 = "myco.homeostasis.dimensions.mechanical.mp1_no_provider_imports:MP1NoProviderImports"
SH1 = "myco.homeostasis.dimensions.shipped.sh1_package_version_ref:SH1PackageVersionRef"
MB1 = "myco.homeostasis.dimensions.metabolic.mb1_raw_notes_backlog:MB1RawNotesBacklog"
MB2 = "myco.homeostasis.dimensions.metabolic.mb2_no_integrated_yet:MB2NoIntegratedYet"
SE1 = "myco.homeostasis.dimensions.semantic.se1_dangling_refs:SE1DanglingRefs"
SE2 = "myco.homeostasis.dimensions.semantic.se2_orphan_integrated:SE2OrphanIntegrated"
# v0.5.8 additions (Phase 14 of the v0.5.8 cleanup):
MP2 = "myco.homeostasis.dimensions.mechanical.mp2_plugin_provider_imports:MP2PluginProviderImports"
DC1 = "myco.homeostasis.dimensions.mechanical.dc1_module_docstring:DC1ModuleDocstring"
DC2 = "myco.homeostasis.dimensions.mechanical.dc2_public_function_docstring:DC2PublicFunctionDocstring"
DC3 = "myco.homeostasis.dimensions.mechanical.dc3_public_class_docstring:DC3PublicClassDocstring"
DC4 = "myco.homeostasis.dimensions.mechanical.dc4_module_doc_ref:DC4ModuleDocRef"
CS1 = "myco.homeostasis.dimensions.mechanical.cs1_contract_version_sync:CS1ContractVersionSync"
RL1 = "myco.homeostasis.dimensions.semantic.rl1_rules_referenced:RL1RulesReferenced"
FR1 = "myco.homeostasis.dimensions.mechanical.fr1_fresh_substrate_invariants:FR1FreshSubstrateInvariants"
PA1 = "myco.homeostasis.dimensions.mechanical.pa1_write_surface_coverage:PA1WriteSurfaceCoverage"
SE3 = "myco.homeostasis.dimensions.semantic.se3_link_self_cycle:SE3LinkSelfCycle"
MB3 = "myco.homeostasis.dimensions.metabolic.mb3_raw_notes_high_watermark:MB3RawNotesHighWatermark"
CG1 = "myco.homeostasis.dimensions.mechanical.cg1_doctrine_has_src_reference:CG1DoctrineHasSrcReference"
CG2 = "myco.homeostasis.dimensions.mechanical.cg2_subpackage_has_doctrine_link:CG2SubpackageHasDoctrineLink"
DI1 = "myco.homeostasis.dimensions.mechanical.di1_discipline_hooks_present:DI1DisciplineHooksPresent"
# v0.6.0 additions (21 new dims; severity-promotion ledger applies via _canon.yaml::lint.severity_promotion):
PA2 = "myco.homeostasis.dimensions.mechanical.pa2_megafile_loc_cap:PA2MegafileLocCap"
PA3 = "myco.homeostasis.dimensions.mechanical.pa3_surface_pure_adapter:PA3SurfacePureAdapter"
PA4 = "myco.homeostasis.dimensions.mechanical.pa4_core_no_subsystem_deps:PA4CoreNoSubsystemDeps"
PA5 = "myco.homeostasis.dimensions.mechanical.pa5_meta_subsystem_layering:PA5MetaSubsystemLayering"
SC1 = "myco.homeostasis.dimensions.mechanical.sc1_schema_parity:SC1SchemaParity"
DC5 = "myco.homeostasis.dimensions.mechanical.dc5_abstract_parent_allowlist:DC5AbstractParentAllowlist"
DI2 = "myco.homeostasis.dimensions.mechanical.di2_discipline_hooks_content:DI2DisciplineHooksContent"
AD1 = "myco.homeostasis.dimensions.mechanical.ad1_adapter_silent_skip:AD1AdapterSilentSkip"
# v0.8.6 — SE4/RL2/RL3 excreted (永恒删减; never-fire dead-letter dims).
MB4 = "myco.homeostasis.dimensions.metabolic.mb4_sporulated_reabsorbed:MB4SporulatedReabsorbed"
MB6 = "myco.homeostasis.dimensions.metabolic.mb6_stale_draft_or_distilled:MB6StaleDraftOrDistilled"
SH2 = "myco.homeostasis.dimensions.shipped.sh2_kernel_ahead_of_canon:SH2KernelAheadOfCanon"
CL1 = "myco.homeostasis.dimensions.mechanical.cl1_sampling_policy_gate:CL1SamplingPolicyGate"
MP3 = "myco.homeostasis.dimensions.mechanical.mp3_plugin_bytecode_audit:MP3PluginBytecodeAudit"
CL2 = "myco.homeostasis.dimensions.mechanical.cl2_oauth_token_residency:CL2OAuthTokenResidency"
CL3 = "myco.homeostasis.dimensions.mechanical.cl3_sampling_token_clear:CL3SamplingTokenClear"
MF4 = "myco.homeostasis.dimensions.mechanical.mf4_overlay_subsystem_validity:MF4OverlaySubsystemValidity"
# v0.7.2 additions (4 new dims for 永恒删减 / eternal-pruning ratchet):
MB8 = "myco.homeostasis.dimensions.metabolic.mb8_shim_hit_counter:MB8ShimHitCounter"
PA6 = "myco.homeostasis.dimensions.mechanical.pa6_repo_bloat:PA6RepoBloat"
MF5 = "myco.homeostasis.dimensions.mechanical.mf5_generated_mirror_integrity:MF5GeneratedMirrorIntegrity"
SE5 = "myco.homeostasis.dimensions.semantic.se5_version_anchor_freshness:SE5VersionAnchorFreshness"
# v0.7.5 additions (1 new dim — L0 Living Bets cadence enforcement):
LB1 = "myco.homeostasis.dimensions.semantic.lb1_living_bets_overdue:LB1LivingBetsOverdue"
# v0.8.0 addition (1 new dim — L0 Living Bets two-regime axis check):
LB2 = "myco.homeostasis.dimensions.semantic.lb2_living_bets_regime:LB2LivingBetsRegime"

[tool.hatch.version]
# Single source of truth for the package version — per L1 versioning.md.
path = "src/myco/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/myco"]

[tool.hatch.build.targets.sdist]
# v0.8.4 root-cleanup (2026-05-12): 3 content directories (tests/,
# docs/, scripts/) moved to dot-prefixed hidden form (.tests/, .docs/,
# .scripts/) so the repo root carries: LICENSE / README.md /
# pyproject.toml + src/ + 14 hidden entries. src/ stays visible
# because an editable install can't be reinstalled while
# `mcp-server-myco.exe` is in use; the user's Claude Desktop session
# locks the binary. src/ relocation is a separate craft if the user
# wants the absolute minimum (3 files, 0 visible folders).
include = [
  "/src",
  "/.tests",
  "/.docs",
  "/.scripts",
  "/.plugin",
  "/.claude-plugin",
  "/.claude",
  "/.github",
  "/.docker",
  "/.meta",
  "/.mcp.json",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
# v0.8.4 root-cleanup (2026-05-12): collapsed several explicit root
# entries into broader globs after structural moves:
#   - README_zh.md + README_ja.md → docs/i18n/   (covered by /docs)
#   - CONTRIBUTING.md + CODE_OF_CONDUCT.md + SECURITY.md +
#     CITATION.cff → .github/                   (covered by /.github)
#   - assets/ → docs/assets/                     (covered by /docs)
#   - examples/ → docs/examples/                 (covered by /docs)
#   - agents/ + commands/ + hooks/ + skills/    → plugin/{...}/
# `/docs/INSTALL.md` removed (redundant: /docs already covers it).
# `/plugin` added so the v0.8.4 plugin-bundle parent ships in sdist.
exclude = [
  "/.release_notes_*.md",
  "/upload*.log",
  "/dist",
  "/build",
  "/.pytest_cache",
  "/.venv",
  "**/__pycache__",
]

[tool.pytest.ini_options]
# v0.8.4 root-cleanup (2026-05-12): tests/ and src/ relocated to
# hidden .tests/ and src/ for root minimalism.
testpaths = [".tests"]
# v0.6.0 §K.3 / §K.4: enable coverage gate + xdist parallel by default.
# CI runs --cov-report=xml + per-package floors via .scripts/coverage_floors.py.
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]
# v0.8.4 root-cleanup (2026-05-12): redirect pytest cache from
# default `.pytest_cache/` (visible root dotdir) to `.cache/pytest/`
# under a single consolidated cache parent. .mypy_cache + .ruff_cache
# are similarly redirected via their own tool sections below.
cache_dir = ".cache/pytest"
# v0.7.6 (graph-builder benchmark suite): the ``benchmark`` marker
# tags the slow scale tests under ``tests/benchmark/`` so a normal
# ``pytest`` run can exclude them via ``-m "not benchmark"`` and a
# scheduled run can target them via ``-m benchmark``. The tests also
# self-skip unless ``MYCO_RUN_BENCHMARKS=1`` is set, so omitting the
# ``-m`` flag is safe — the env-var gate is the primary defence;
# the marker is a registered alias for the same set.
markers = [
    "benchmark: slow opt-in scale benchmarks (env: MYCO_RUN_BENCHMARKS=1)",
    "multimedia: tests for the v0.8.0 [multimedia] adapter trio (audio / image-OCR / video-frame). Happy paths use mocks; tests run unconditionally (no real whisper/tesseract/cv2 dep needed).",
]

[tool.coverage.run]
# v0.6.0 §K.3 — coverage configuration introduced.
# v0.8.4 root-cleanup (2026-05-12): src/ moved to src/.
source = ["src/myco"]
branch = true
omit = [
  # boundary symbionts have OS-conditional code paths covered only on
  # the matching CI matrix cell; per-package floor (60%) compensates.
  "*/symbionts/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

# -----------------------------------------------------------------------------
# v0.5.7 — Tool baselines (locked for CI consumption)
# -----------------------------------------------------------------------------

[tool.mypy]
# The v0.5.7 baseline is deliberately permissive: we opt in to the two
# hygiene flags (unused ignores, redundant casts) without forcing
# strict-mode over the whole repo. That lets us fix real type drift
# incrementally without blocking small PRs on an explosion of Any leaks.
# The CI workflow runs `mypy src/myco` only (not tests/) — tests import
# via fixtures that would need extensive stub work.
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = false
show_error_codes = true
# Modules without third-party stubs: don't crash, just log.
ignore_missing_imports = true
# v0.8.4 root-cleanup (2026-05-12): redirect mypy cache from default
# `.mypy_cache/` to consolidated `.cache/mypy/`.
cache_dir = ".cache/mypy"
# v0.6.0 §K.4: extend mypy to tests/ with disallow_untyped_defs=false
# (test fixtures may stay untyped); ratchets toward stricter typing
# over v0.6.x via mypy_tests_baseline.txt.

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
ignore_errors = true  # initial baseline; tighten over v0.6.x

[tool.ruff]
target-version = "py310"
line-length = 88
# v0.8.4 root-cleanup (2026-05-12): src/ + tests/ moved to src/ + .tests/.
src = ["src", ".tests"]
# v0.8.4 root-cleanup (2026-05-12): redirect ruff cache from default
# `.ruff_cache/` to consolidated `.cache/ruff/`.
cache-dir = ".cache/ruff"
# Exclude runtime caches so ruff doesn't report on files we
# intentionally do not maintain.
exclude = [
  ".myco/state",
  ".venv",
  "dist",
  "build",
]

[tool.ruff.lint]
# Conservative but non-trivial selection: errors + pycodestyle
# warnings + import discipline + modernization + common security
# + common correctness + common simplification. S (bandit) is kept
# out of the default because `assert` use in tests would flood
# findings; tests opt in via per-file-ignores below if needed.
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort (import ordering)
  "B",     # flake8-bugbear
  "UP",    # pyupgrade (3.10+ idioms)
  "SIM",   # flake8-simplify
  "C4",    # flake8-comprehensions
  "RUF",   # ruff-specific
]
# RUF001 (ambiguous unicode) fires on legitimate typographic dashes in
# changelog templates; RUF022 (unsorted __all__) is low-value churn;
# E501 line-too-long is covered informally by `ruff format`. Line
# length enforcement happens through the formatter, not the linter.
ignore = [
  "E501",
  "RUF001",
  "RUF022",
  "RUF043",  # pytest.raises ambiguous pattern — low-signal
  "SIM105",  # contextlib.suppress rewrite — cosmetic
  "SIM108",  # if-else vs if-exp — cosmetic
  "SIM110",  # any() rewrite — cosmetic
  "SIM117",  # combined with statements — cosmetic on test I/O contexts
  "B904",    # raise from — cosmetic on already-intentional patterns
]

[tool.ruff.lint.per-file-ignores]
# Test files are allowed to use asserts and may skip some stylistic
# rules that make sense only in production code.
".tests/**" = ["B017"]
# Generated / template strings in the ramify scaffolder include
# example code that intentionally uses old-style typing etc.
"src/myco/cycle/ramify.py" = ["UP035"]

[tool.ruff.format]
# Ruff's formatter is stable enough to be our canonical formatter.
# Running `ruff format` produces deterministic output identical to
# `black` on the vast majority of cases (double-quoted strings,
# trailing commas in multi-line collections, etc.). Declaring it here
# pins the convention so contributor diffs don't churn on formatter
# version drift.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
